fix gap at the top

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,6 @@ footer a {
 
 @media screen and (max-width : 1200px) {
     .logo {
-        position:relative;
+        position: inherit;
     }
 }
